# agentihooks

./: .agentihooks.json  .claudeignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NEXT.md  README.md  SECURITY.md  _config.yml  index.md  pyproject.toml
.claude/agents/: README.md  error-researcher.md
.claude/rules/: agentihooks-toolbelt.md  clearance-levels.md  monitor-tool.md
.claude/skills/: README.md
.github/: FUNDING.yml  release.yml
.github/workflows/: brain-smoke.yml  ci.yml  pages.yml  publish-pypi.yml  publish-testpypi.yml  release.yml  sonar-scan.yml  test.yml
docs/: bundles.md  connectors.md  cost-management.md  extending.md
docs/getting-started/: index.md  installation.md  memory-mirror.md  per-project.md  portability.md  profiles.md
docs/hooks/: broadcast.md  context-preprocessor.md  events.md  index.md
docs/mcp-tools/: aws.md  compute.md  database.md  email.md  index.md  messaging.md  observability.md  storage.md  utilities.md
docs/pillars/: channels.md  context.md  fleet-command.md  guardrails.md  identity.md  index.md  overlays.md
docs/reference/: cli-commands.md  configuration.md  index.md
hooks/: __init__.py  _async.py  _brain_http.py  _redis.py  common.py  config.py  hook_manager.py  quota.py  statusline.py  telemetry.py  tool_memory.py
hooks/context/: __init__.py  _strip.py  agent_pool.py  amygdala_hook.py  auto_dev_switch.py  autonomy_enforcer.py  bash_output_filter.py  brain_adapter.py  brain_writer_hook.py  branch_guard.py  broadcast.py  ci_manifesto.py  claude_md_sanity.py  compact_advisor.py  context_refresh.py  controls_toggle.py  dep_banner.py  enforcement.py  file_read_cache.py  hot_arcs.py  image_persistence_reminder.py  kubectl_mutation_guard.py  memory_sync_events.py  overlay_injector.py  preprocessor.py  prod_lockdown.py  retry_breaker.py  rules_refresh.py  thinking_policy.py  version_guard.py  voice_output.py
hooks/integrations/: __init__.py  aws.py  session_state.py
hooks/mcp/: __init__.py  _registry.py  agent_pool.py  aws.py  channels.py  database.py  email.py  enforcement.py  messaging.py  observability.py  profiles.py  storage.py  utilities.py
hooks/observability/: container_logs.py  context_audit.py  event_relay.py  otel.py  peak_hours.py  token_monitor.py
operator/: KNOWN-ISSUES.md
profiles/_base/: settings.base.json
profiles/admin/: CLAUDE.md  profile.yml  settings.overrides.json
resourcers/: CHEET-SHEET.md
scripts/: brain-smoke  brain_outbox_sync.sh  claude_linter.py  claude_usage_watcher.py  install.py  mcp_reporter.py  memory_mirror_sync.py  overlay.py  session_registry.py  status_checker.py  sync_daemon.py
tests/: conftest.py  test_agent_pool.py  test_channels.py  test_ci_manifesto.py  test_claude_linter.py  test_claude_md_sanity.py  test_common_extended.py  test_config.py  test_enforcement.py  test_event_relay.py  test_hook_manager.py  test_import_hygiene.py  test_install.py  test_install_validation.py  test_kubectl_mutation_guard.py  test_mcp_registry.py  test_mcp_reporter.py  test_mcp_utilities.py  test_memory_mirror_sync.py  test_memory_sync_events.py  test_overlay.py  test_ownership_scope.py  test_quota.py  test_rules_refresh.py  test_status_checker.py  test_sync_daemon.py
(+28 files in other folders)
