[project]
name = "agentihooks"
version = "1.16.0"
description = "Hook system and MCP tool server for Claude Code agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "The Cloud Clockwork"},
]
keywords = ["claude-code", "mcp", "hooks", "agents", "agenticore"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]

dependencies = [
    "mcp[cli]>=1.0.0",
    "PyJWT>=2.8.0",
    "requests>=2.31.0",
    "httpx>=0.27.0",
    "playwright>=1.44.0",
    "pyyaml>=6.0",
    # Span emission (hooks/telemetry.py) is a core capability, not an add-on:
    # brain.marker_write / brain.delivery drive the Broadcast Cortex panel.
    # Kept as an extra, these were never installed anywhere and every span was
    # silently dropped. The `otel` extra below stays for backwards compat.
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.20.0",
    "opentelemetry-exporter-otlp-proto-http>=1.20.0",
]

[project.optional-dependencies]
postgres = ["psycopg2-binary>=2.9.9"]
otel = [
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.20.0",
    "opentelemetry-exporter-otlp-proto-http>=1.20.0",
]
all = [
    "psycopg2-binary>=2.9.9",
    "redis>=5.0.0",
    "boto3>=1.34.0",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.20.0",
    "opentelemetry-exporter-otlp-proto-http>=1.20.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "boto3>=1.34.0",
    "fakeredis>=2.0",
]

[project.scripts]
agentihooks = "scripts.install:main"

[tool.setuptools.packages.find]
include = ["hooks*", "scripts*", "profiles*"]

[tool.setuptools.package-data]
"hooks.context" = ["data/*.json"]
"profiles._base" = ["*.json"]
"profiles.default" = ["*.yml", "*.json", ".claude/*.json", ".claude/CLAUDE.md"]
"profiles.admin" = ["*.yml", "*.json", ".claude/*.json", ".claude/CLAUDE.md"]
"profiles.coding" = ["*.yml", "*.json", ".claude/*.json", ".claude/CLAUDE.md"]

[project.urls]
Homepage = "https://github.com/The-Cloud-Clockwork/agentihooks"
Repository = "https://github.com/The-Cloud-Clockwork/agentihooks"
Issues = "https://github.com/The-Cloud-Clockwork/agentihooks/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["unit: Unit tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = [
    "E501",   # line too long
    "F822",   # lazy-loaded names in __all__ (intentional for circular import avoidance)
    "E402",   # module-level imports not at top (conditional imports by design)
    "E741",   # ambiguous variable names (l, O, I) used in compact code
]

[tool.ruff.format]
quote-style = "double"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
